# devsecops_embedded_sys

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  comms.cpp  comms.h  config_loader.cpp  config_loader.h  main.cpp
cmake/toolchains/: armhf.cmake
config/: comms.yaml
tests/: CMakeLists.txt  test_comms.cpp  test_config_loader.cpp
